adding "--add-opens" to test and docs
Still failing test though not related to open modules